# mais

./: .env.example  .gitignore  README.md  docker-compose.yml  openapi.yml
api/: Dockerfile  README.md  requirements.txt
api/api/: dependencies.py  main.py  models.py  openapi.yaml
api/api/repositories/: base.py  file.py  job.py  transcription.py
api/api/routers/: file.py  job.py  transcription.py
api/api/services/: file.py  job.py  transcription.py
be/: Makefile  dev-requirements.txt  requirements.txt  setup.py
be/openapi_server/: __main__.py  config.py
be/openapi_server/controllers/: file_controller.py  job_controller.py  transcription_controller.py
be/openapi_server/domain/: exceptions.py
be/openapi_server/logging/: config.json  config.py
domain/: dev-requirements.txt  pyproject.toml  requirements.txt
domain/models/: job.py  transcription.py
domain/repositories/: base_repository.py  file_repository.py  transcription_repository.py
domain/services/: file.py  job.py  test_file.py  test_transcription.py  transcription.py
services/api/: README.md  requirements.txt
services/mais/: Dockerfile  mais.py  requirements.txt  subtitle.py
ui/: .env  .env.development  package-lock.json  package.json
ui/actions/: file.ts  job.ts  transcription.ts
ui/app/: layout.tsx  page.tsx
ui/app/converter/: page.tsx
ui/components/: navbar.tsx  transcription-table.tsx
ui/config/: site.ts
ui/remotion/: Root.tsx  index.ts
ui/types/: job.ts  transcription.ts  video.ts
worker/: Dockerfile  README.md  requirements.txt
worker/worker/: mais.py  subtitle.py
(+62 files in other folders)
